# win2xcursor-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  config.toml  interactive.sh  pyproject.toml  win2xcursor.py
.github/ISSUE_TEMPLATE/: bug-report.md
src/: cursorgen.py  win2xcursor.py
src/win2xcursor/: __init__.py  __main__.py  ani.py  args.py  config.py  cursor.py  cursorgen.py  frames.py  ico.py  theme.py
tests/: test_config.py
